--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>San Joaquin Valley Town Hall</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
 <header>
