Everest Ibewuike eii4@njit.edu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
     </main>
     <footer>
-        (c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
+        <p>&copy; Copyright Everest Ibewuike, 2024</p>
     </footer>
 </body>
 </html>
